# vibe-404

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  README.md  TODO.md  build_windows.bat
plugin/: CMakeLists.txt
plugin/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/dsp/: CurvedADSR.cpp  CurvedADSR.h  Distortion.cpp  Distortion.h  LFO.cpp  LFO.h  PolyBlepOscillator.cpp  PolyBlepOscillator.h  SVFilter.cpp  SVFilter.h  SynthVoice.cpp  SynthVoice.h
plugin/Source/gui/: LabelledKnob.cpp  LabelledKnob.h  SectionPanel.cpp  SectionPanel.h  Vibe404LookAndFeel.cpp  Vibe404LookAndFeel.h  WaveformSelector.cpp  WaveformSelector.h
plugin/Source/gui/panels/: DistortionPanel.cpp  DistortionPanel.h  EnvelopePanel.cpp  EnvelopePanel.h  FilterPanel.cpp  FilterPanel.h  LFOPanel.cpp  LFOPanel.h  MixPanel.cpp  MixPanel.h  Osc1Panel.cpp  Osc1Panel.h  Osc2Panel.cpp  Osc2Panel.h
